Fix image align

--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,11 @@ p {
         margin: 5px;
     }
 }
+
+.postContent > p > img {
+    max-height: 600px;
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
